fixed: ctas overlapping in mobile

--- a/client/src/stylesheets/Posts.css
+++ b/client/src/stylesheets/Posts.css
@@ -8,7 +8,7 @@
 }
 
 .post{
-  width: 80vw;
+  width: 90vw;
   margin: 1rem;
   padding: 1rem;
   border-radius: 20px;
