--- a/client/src/stylesheets/Signin.css
+++ b/client/src/stylesheets/Signin.css
@@ -154,7 +154,7 @@
   }
 
   .signin_deco img {
-    width: 500px;
+    width: 480px;
     left: -30%;
   }
 
